Update Mods before hosting (#2255)
Fixes #1680